# feedrv2

./: .gitignore  .taplo.toml  main.py  pyproject.toml  settings.toml
data/db/example/: example.db.toml
data/db/example/tables/: complex.table.toml  users.table.toml
data/db/feeds/: feeds.data.toml  feeds.db.toml
data/db/feeds/tables/: feeds.table.toml  http_get.table.toml  http_head.table.toml  http_request.table.toml  items.table.toml  links.table.toml  posts.table.toml
schemas/: data.schema.json  db.schema.json  table.schema.json
src/: config.py  db.py  db_op.py  http.py  logging.py  pipeline.py
src/pipes/: http.py
