[project]
name = "feedr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "feedparser>=6.0.12",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
]

[tool.ruff]
line-length = 50
target-version = "py312"
preview = true  # opt into latest formatting behavior